--- a/ex-2/index.html
+++ b/ex-2/index.html
@@ -11,6 +11,15 @@
 
 <body>
   <!-- Start coding here -->
+   <div class="lightgrey-box">
+    <div class="black-box">
+      <div class="crimson-box">
+        <div class="khaki-box">
+          <h1>TechUp</h1>
+        </div>
+      </div>
+    </div>
+   </div>
 </body>
 
 </html>
