--- a/ex-1/index.html
+++ b/ex-1/index.html
@@ -14,6 +14,17 @@
 
 <body>
   <!-- Start coding here -->
+   <h1>Travel Blog</h1>
+   <div class="content-container">
+    <h2>คาเฟ่เชียงใหม่น่าเที่ยว 10 อันดับ 2040</h2>
+    <img src="./image.jpeg"/>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+   </div>
+   <div class="content-container">
+    <h2>สถานที่น่าเที่ยว 10 อันดับ 2140</h2>
+    <img src="./image.jpeg"/>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+   </div>
 </body>
 
 </html>
